[workspace]
members = ["pjdasm-web"]

[workspace.package]
version = "0.1.0"

[package]
name = "pjdasm"
version.workspace = true
edition = "2021"

[profile.release]
# Helpful for profiling and backtraces
debug = "full"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
glob = "0.3.0"
itertools = "0.11.0"
regex = "1.5.4"
seq-macro = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
winnow = { version = "0.5.15" }